--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.0",
     "lowdb": "^7.0.1",
+    "nanoid": "^5.1.5",
     "zod": "^3.0.2"
   },
   "devDependencies": {
