--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "108yen/repo-name" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "108yen/memo-mcp" }],
   "commit": false,
   "fixed": [],
   "linked": [],
