chore: updated file path

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "vitest run",
     "test:ui": "vitest --ui --coverage.enabled-true",
     "test:coverage": "vitest run --coverage",
-    "quality": "pnpm format && pnpm lint && pnpm typecheck && pnpm test"
+    "quality": "pnpm format && pnpm lint && pnpm typecheck && pnpm test",
+    "release:canary": "pnpm changeset version --snapshot && pnpm changeset publish --no-git-tag --tag canary && pnpm git restore ."
   },
   "keywords": [
     "mcp",
