--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -1,9 +1,6 @@
-name: Release
+name: Release Canary
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 permissions: {}
 
@@ -18,8 +15,6 @@ concurrency:
 jobs:
   version:
     name: Check version
-
-    if: false
 
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -42,13 +37,8 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
-      - name: Run build
-        run: pnpm build
-
-      - name: Create Release Pull Request or Publish to npm
-        uses: changesets/action@v1
-        with:
-          commit: "ci(changesets): updated changelog"
+      - name: Publish to npm
+        run: pnpm release:canary
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
