--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -1,9 +1,6 @@
-name: Release
+name: Release Canary
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 permissions: {}
 
@@ -17,7 +14,7 @@ concurrency:
 
 jobs:
   Release:
-    name: Release
+    name: Release Canary
 
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -40,10 +37,8 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
-      - name: Create Release Pull Request or Publish to npm
-        uses: changesets/action@v1
-        with:
-          commit: "ci(changesets): updated changelog"
+      - name: Publish to npm
+        run: pnpm release:canary
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
