fix: modified build job

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: 23
 
       - name: Install dependencies
         run: pnpm install
@@ -141,10 +141,16 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 23
+
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Run build
         run: pnpm build
