--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 23
+          registry-url: https://registry.npmjs.org
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v4
