--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:ui": "vitest --ui --coverage.enabled=true",
     "test:coverage": "vitest run --coverage",
     "quality": "pnpm format && pnpm lint && pnpm typecheck && pnpm test",
-    "release:canary": "pnpm changeset version --snapshot && pnpm changeset publish --no-git-tag --tag canary"
+    "release:canary": "pnpm changeset version --snapshot && pnpm changeset publish --no-git-tag --tag canary",
+    "release": "pnpm changeset publish"
   },
   "keywords": [
     "mcp",
