--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -117,17 +117,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run tests
-        run: pnpm test
+      - name: Run test
+        run: pnpm test:coverage
 
-      # Uncomment the following lines if you want to run tests with coverage and upload to Codecov
-      # - name: Run test
-      #   run: pnpm test:coverage
-
-      # - name: Upload coverage reports to Codecov
-      #   uses: codecov/codecov-action@v5
-      #   with:
-      #     token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: 108yen/memo-mcp
 
   build:
     name: Build
